fixed image spacing in technology section

--- a/css/style.css
+++ b/css/style.css
@@ -539,6 +539,12 @@
 			width: 75%;
 		}
 
+		.imgage.center img {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+		}
+
 /* List */
 
 	ol {
@@ -1313,7 +1319,7 @@
 /* Footer */
 
 	#footer {
-		color: #949494;
+		color: #95a5a6;
 		padding: 4em 0;
 		text-align: center;
 	}
